@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.8
 
+	- Added text selection and copy to Fl_Help_View.
 	- Fixed position of popup menu titles (STR #1322)
 	- Showing any window will disable the current tooltip
 	  so it won't pop over menus (STR #1321)
